# FinTorch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  GraphBEANModule.yaml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  dev-requirements.txt  environment.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json  setup-mounted.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  dataset.yml  improvements  model.yaml
.github/PULL_REQUEST_TEMPLATE/: dataset.md
.github/workflows/: bumpr.yml  cla.yml  codecov.yml  conda-publish.yaml  docs.yaml  lint.yml  pypi.yml  python-package-conda.yml  python-tests.yml
conda/: conda_build_config.yaml  meta.yaml
docs/: Makefile  authors.rst  conf.py  console_script_setup.rst  contributing.rst  fintorch.datasets.kaggle.rst  fintorch.datasets.rst  fintorch.dl.rst  fintorch.graph.layers.rst  fintorch.graph.rst  fintorch.layers.rst  fintorch.models.dl.rst  fintorch.models.graph.graphbean.rst  fintorch.models.graph.graphbean.wand.rst  fintorch.models.graph.rst  fintorch.models.rst  fintorch.rst  fintorch_cli.rst  index.rst  installation.rst  make.bat  modules.rst  tutorials.rst  usage.rst
docs/tutorials/: HeteroData.ipynb  tft.ipynb
docs/tutorials/elliptic/: Elliptic.ipynb
docs/tutorials/elliptical/: Elliptic.ipynb  Elliptical.ipynb
docs/tutorials/funsd/: funsd.ipynb
docs/tutorials/graphbean/: graphbean.ipynb
docs/tutorials/marketdata/: limitorderbookdata.ipynb  marketdata.ipynb
docs/tutorials/stocktick/: stocktick.ipynb
docs/tutorials/tft/: tft.ipynb
docs/tutorials/tradingattheclose/: tradingattheclose.ipynb
examples/datasets/: AmazonFraudDatasetTutorial.py  example_auction.py  example_auctiondata.py  example_elliptic.py  example_ellipticpp.py  example_invoicedata.py  example_marketdata.py  example_stockticker.py  stockticker.py
examples/models/: causal_hyperparam.py  causalformer.py  example_auction.py  example_stockticker_tft.py  example_tft.py  example_tft_airpassenger.py  example_tft_electricity.py  graphBeanOGB.py  graphbean.py  graphbeanClassifier.py  graphbeanClassifierElliptic.py  graphbeanElliptic.py  graphbeanOGB.py  marketdata.py  stockformer.py  stockmodel.py
fintorch/: __init__.py  cli.py  fintorch.py
fintorch/datasets/: AmazonFraudDataset.py  CDIP.py  ConvFinQA.py  ECTSum.py  FDCompCN.py  FINDSum.py  FLUE.py  FinQA.py  OrderBook.py  README.md  YelpChi.py  __init__.py  airpassenger.py  auctiondata.py  electricity_simple.py  elliptic.py  ellipticpp.py  invoice.py  marketdata.py  stockticker.py
fintorch/datasets/kaggle/: downloader.py
fintorch/datasets/synthetic/: __init__.py  simpleSynthetic.py
fintorch/dl/: pixiu.py  portfolio_transformer.py
fintorch/graph/: __init__.py
fintorch/graph/layers/: __init__.py  beanconv.py
fintorch/layers/: DCLS.py  DCNN.py  attention.py
fintorch/models/: __init__.py
fintorch/models/graph/: __init__.py  graphBEAN.py
fintorch/sweeps/wand/: graphbean.py
fintorch/training/: GraphBeanTrainer.py
hooks/: post_gen_project.py  pre_gen_project.py
signatures/version1/: SAPCLA.md  cla.json
tests/: __init__.py  test_cli.py  test_fintorch.py
tests/datasets/: test_auctiondata.py  test_electricity.py  test_elliptic.py  test_ellipticpp.py  test_invoice.py  test_marketdata.py  test_stocktick.py  test_synthetic.py  testsdata.pickle
tests/layers/: test_DCNN.py  test_attention.py  test_beanconv.py
tests/models/: test_graphBEAN.py
tests/models/causalformer/: test_causalconv.py  (+8 more)
tutorials/: Elliptical.ipynb
(+27 files in other folders)
